6/9: Developed and refined UI and worked on implementing reply function. Has tried progress bar but it has not been tested/unsure of where to add it.

--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -39,6 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
+        android:backgroundTint="@color/button_color"
+        android:textColor="@android:color/white"
         android:text="@string/sweet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
