--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -49,6 +49,7 @@
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/tvBody"
             app:layout_constraintStart_toStartOf="@+id/tvBody"
@@ -76,6 +77,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/tvRepliesCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="2dp"
+            android:text="0"
+            app:layout_constraintStart_toEndOf="@+id/ivReply"
+            app:layout_constraintTop_toTopOf="@+id/ivReply" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
